# Nuomi-Switch

./: .env copy.production  .gitignore  PRD.md  PRODUCT.md  README.md  claude-account-flow-summary.md  index.html  package.json  pnpm-lock.yaml  version.json
.github/workflows/: release.yml
docs/: migration-and-recovery.md  real-account-smoke.md  security.md  troubleshooting.md
docs/spikes/: codex-auth-quota-oauth.md
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  test_support.rs
src-tauri/src/commands/: account.rs  claude.rs  mod.rs  working_light.rs
src-tauri/src/infra/: atomic_write.rs  logger.rs  paths.rs  redaction.rs  storage.rs
src-tauri/src/models/: account.rs  auth.rs  claude.rs  mod.rs  settings.rs  working_light.rs
src-tauri/src/services/: account_service.rs  auth_file_service.rs  claude_desktop_gateway_service.rs  claude_service.rs  codex_app_service.rs  codex_config_service.rs  codex_local_access_gateway.rs  codex_official_app_server_service.rs  codex_session_visibility_service.rs  import_service.rs  mod.rs  oauth_service.rs  quota_scheduler_service.rs  quota_service.rs  switch_service.rs  working_light_service.rs
src/pages/: AccountResetSettingsPage.tsx  AccountsPage.css  AccountsPage.tsx  ClaudeAccountsPage.css  ClaudeAccountsPage.tsx  CodexAccountsPage.css  CodexAccountsPage.tsx  CodexResetSettingsPage.tsx  CodexSessionsPage.tsx  LogsPage.tsx  SessionsPage.css  SessionsPage.tsx  SettingsPage.tsx
(+62 files in other folders)
